// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ImageController Component > Component snapshots > matches snapshot in default state 1`] = `
.emotion-0 {
  text-align: center;
  position: relative;
}

.emotion-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Montserrat Variable",sans-serif;
  font-size: 1.4285714285714284rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 120px;
  height: 120px;
  margin-bottom: 16px;
  border: 4px solid;
  border-color: #C2D8FF;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 120px;
  height: 120px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: none;
}

.emotion-3::before {
  content: "";
  width: 120px;
  height: 120px;
  position: absolute;
  border-radius: 50%;
  background-color: #C2D8FF;
  opacity: 0.6;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
  z-index: 0;
}

.emotion-3:hover::before {
  opacity: 0.9;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 2.5rem;
  z-index: 1;
}

<div
  class="MuiBox-root emotion-0"
>
  <div
    class="MuiAvatar-root MuiAvatar-circular emotion-1"
  >
    <img
      alt="User avatar"
      class="MuiAvatar-img emotion-2"
      src="/default-avatar.jpg"
    />
  </div>
  <div
    class="MuiBox-root emotion-3"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge emotion-4"
      data-testid="CloudUploadIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96M14 13v4h-4v-4H7l5-5 5 5z"
      />
    </svg>
  </div>
  <input
    accept="image/*"
    role="textbox"
    style="display: none;"
    type="file"
  />
</div>
`;

exports[`ImageController Component > Component snapshots > matches snapshot in edit mode 1`] = `
.emotion-0 {
  text-align: center;
  position: relative;
}

.emotion-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Montserrat Variable",sans-serif;
  font-size: 1.4285714285714284rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 120px;
  height: 120px;
  margin-bottom: 16px;
  border: 4px solid;
  border-color: #C2D8FF;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 120px;
  height: 120px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-3::before {
  content: "";
  width: 120px;
  height: 120px;
  position: absolute;
  border-radius: 50%;
  background-color: #C2D8FF;
  opacity: 0.6;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
  z-index: 0;
}

.emotion-3:hover::before {
  opacity: 0.9;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 2.5rem;
  z-index: 1;
}

<div
  class="MuiBox-root emotion-0"
>
  <div
    class="MuiAvatar-root MuiAvatar-circular emotion-1"
  >
    <img
      alt="User avatar"
      class="MuiAvatar-img emotion-2"
      src="/default-avatar.jpg"
    />
  </div>
  <div
    class="MuiBox-root emotion-3"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge emotion-4"
      data-testid="CloudUploadIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96M14 13v4h-4v-4H7l5-5 5 5z"
      />
    </svg>
  </div>
  <input
    accept="image/*"
    role="textbox"
    style="display: none;"
    type="file"
  />
</div>
`;

exports[`ImageController Component > Component snapshots > matches snapshot with selected image 1`] = `
.emotion-0 {
  text-align: center;
  position: relative;
}

.emotion-1 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  width: 40px;
  height: 40px;
  font-family: "Montserrat Variable",sans-serif;
  font-size: 1.4285714285714284rem;
  line-height: 1;
  border-radius: 50%;
  overflow: hidden;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 120px;
  height: 120px;
  margin-bottom: 16px;
  border: 4px solid;
  border-color: #C2D8FF;
}

.emotion-2 {
  width: 100%;
  height: 100%;
  text-align: center;
  object-fit: cover;
  color: transparent;
  text-indent: 10000px;
}

.emotion-3 {
  cursor: pointer;
  position: absolute;
  top: 0;
  left: 0;
  width: 120px;
  height: 120px;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: none;
}

.emotion-3::before {
  content: "";
  width: 120px;
  height: 120px;
  position: absolute;
  border-radius: 50%;
  background-color: #C2D8FF;
  opacity: 0.6;
  -webkit-transition: opacity 200ms ease-in;
  transition: opacity 200ms ease-in;
  z-index: 0;
}

.emotion-3:hover::before {
  opacity: 0.9;
}

.emotion-4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  width: 1em;
  height: 1em;
  display: inline-block;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  -webkit-transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  transition: fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  fill: currentColor;
  font-size: 2.5rem;
  z-index: 1;
}

<div
  class="MuiBox-root emotion-0"
>
  <div
    class="MuiAvatar-root MuiAvatar-circular emotion-1"
  >
    <img
      alt="User avatar"
      class="MuiAvatar-img emotion-2"
      src="/user-avatar.jpg"
    />
  </div>
  <div
    class="MuiBox-root emotion-3"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeLarge emotion-4"
      data-testid="CloudUploadIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M19.35 10.04C18.67 6.59 15.64 4 12 4 9.11 4 6.6 5.64 5.35 8.04 2.34 8.36 0 10.91 0 14c0 3.31 2.69 6 6 6h13c2.76 0 5-2.24 5-5 0-2.64-2.05-4.78-4.65-4.96M14 13v4h-4v-4H7l5-5 5 5z"
      />
    </svg>
  </div>
  <input
    accept="image/*"
    role="textbox"
    style="display: none;"
    type="file"
  />
</div>
`;
